test/should_fail/annot_004.grg
actions annot_004;

rule r {
	pattern {
		--> [prio=42] <--;
	}
	modify {}
}
